added more helm

--- a/index.html
+++ b/index.html
@@ -520,6 +520,11 @@
         </div>
         
 
+        <div class="photo" data-number="396" data-name="helm" data-type="b3" data-position="atk" data-faction="elysion" data-rarity="ssr" data-weapon="snr">
+            <img src="image/396_elysion_ssr_b3_atk_snr_helm.webp" alt="396_elysion_ssr_b3_atk_snr_helm.webp" onclick="toggleImageSelection(this)">
+        </div>
+        
+
         <div class="photo" data-number="414" data-name="centi" data-type="B2" data-position="def" data-faction="missilis" data-rarity="ssr" data-weapon="rl">
             <img src="image/414_missilis_ssr_B2_def_rl_centi.webp" alt="414_missilis_ssr_B2_def_rl_centi.webp" onclick="toggleImageSelection(this)">
         </div>
