--- a/index.html
+++ b/index.html
@@ -95,31 +95,31 @@
     <div id="selectedContainer">
         <!-- Team 1 -->
         <div class="team-row" data-team="1">
-            <div class="team-label">T1</div>
+            <div class="team-label">T1</div> <div class="team-score">0.0</div>
             <div class="team-images" data-team="1">
             </div>
         </div>
         <!-- Team 2 -->
         <div class="team-row" data-team="2">
-            <div class="team-label">T2</div>
+            <div class="team-label">T2</div> <div class="team-score">0.0</div>
             <div class="team-images" data-team="2">
             </div>
         </div>
         <!-- Team 3 -->
         <div class="team-row" data-team="3">
-            <div class="team-label">T3</div>
+            <div class="team-label">T3</div> <div class="team-score">0.0</div>
             <div class="team-images" data-team="3">
             </div>
         </div>
         <!-- Team 4 -->
         <div class="team-row" data-team="4">
-            <div class="team-label">T4</div>
+            <div class="team-label">T4</div> <div class="team-score">0.0</div>
             <div class="team-images" data-team="4">
             </div>
         </div>
         <!-- Team 5 -->
         <div class="team-row" data-team="5">
-            <div class="team-label">T5</div>
+            <div class="team-label">T5</div> <div class="team-score">0.0</div>
             <div class="team-images" data-team="5">
             </div>
         </div>
@@ -852,6 +852,11 @@
 
         <div class="photo" data-number="87" data-name="moran" data-type="B1" data-position="def" data-faction="tetra" data-rarity="ssr" data-weapon="ar">
             <img src="image/87_tetra_ssr_B1_def_ar_moran.webp" alt="87_tetra_ssr_B1_def_ar_moran.webp" onclick="toggleImageSelection(this)">
+        </div>
+        
+
+        <div class="photo" data-number="87" data-name="ade" data-type="b2" data-position="sp" data-faction="tetra" data-rarity="ssr" data-weapon="ar">
+            <img src="image/87_tetra_ssr_b2_sp_ar_ade.webp" alt="87_tetra_ssr_b2_sp_ar_ade.webp" onclick="toggleImageSelection(this)">
         </div>
         
     </div>
