--- a/index.html
+++ b/index.html
@@ -918,6 +918,9 @@
     html2canvas(document.getElementById("selectedContainer"), {
         useCORS: true,
         allowTaint: true,
+        backgroundColor: "#000", // Set the background to black
+        width: 750,  // Set custom width
+        height: 900, // Set custom height
     }).then(function(canvas) {
         console.log("Canvas rendered successfully.");
         
@@ -933,6 +936,7 @@
         console.error("html2canvas failed:", error);
     });
 }
+
     </script>
 
 
