--- a/index.html
+++ b/index.html
@@ -919,8 +919,8 @@
         useCORS: true,
         allowTaint: true,
         backgroundColor: "#000", // Set the background to black
-        width: 750,  // Set custom width
-        height: 900, // Set custom height
+        width: 600,
+        height: 800
     }).then(function(canvas) {
         console.log("Canvas rendered successfully.");
         
