--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
         </div>
         
 
-        <div class="photo" data-number="130" data-name="Anis Sparkling Summer2" data-type="b3" data-position="sp" data-faction="tetra" data-rarity="ssr" data-weapon="sg">
-            <img src="image/130_tetra_ssr_b3_sp_sg_Anis Sparkling Summer2.webp" alt="130_tetra_ssr_b3_sp_sg_Anis Sparkling Summer2.webp" onclick="toggleImageSelection(this)">
+        <div class="photo" data-number="130" data-name="anis sparkling summer" data-type="b3" data-position="sp" data-faction="tetra" data-rarity="ssr" data-weapon="sg">
+            <img src="image/130_tetra_ssr_b3_sp_sg_anis sparkling summer.webp" alt="130_tetra_ssr_b3_sp_sg_anis sparkling summer.webp" onclick="toggleImageSelection(this)">
         </div>
         
 
