added save update

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <button id="sortToggle" onclick="toggleSortCriteria()">Sort by Name</button>
         <button id="orderToggle" onclick="toggleSortOrder()">Lowest</button>
         <button id="showHideButton" onclick="toggleShowHide()">Show/Hide All</button>
-        <button id="clearSelectionBtn">Clear Selection</button>
+        <button id="clearSelectionBtn">Clear Selected Team</button>
     </div>
 
     
