--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    </style>
 </head>
 <body>
-    
+
     <!-- Team Selection Container (Fixed) -->
     <div class="fixed-team-container">
         <h2 class="team-title">Teams</h2>
@@ -102,49 +102,6 @@
     </div>
     <div class="filter-wrapper">
         <button class="burst-btn filter-btn" onclick="toggleFilter(this)"><i class="filter-icon">⚙️</i></button>
-
-        <div class="filter-content" style="display: none;"> <!-- Hidden by default -->
-        <div class="filter-grid">
-            <!-- Burst filter moved to top bar -->
-            <div class="filter-box">
-                <h4>Class:</h4>
-                <div class="checkbox-group">
-                    <label class="checkbox-label"><input type="checkbox" value="def" onchange="updateFilters()"><span>Defender</span></label>
-                    <label class="checkbox-label"><input type="checkbox" value="sp" onchange="updateFilters()"><span>Supporter</span></label>
-                    <label class="checkbox-label"><input type="checkbox" value="atk" onchange="updateFilters()"><span>Attacker</span></label>
-                </div>
-            </div>
-            <div class="filter-box">
-                <h4>Industry:</h4>
-                <div class="checkbox-group">
-                    <label class="checkbox-label"><input type="checkbox" value="elysion" onchange="updateFilters()"><span>Elysion</span></label>
-                    <label class="checkbox-label"><input type="checkbox" value="missilis" onchange="updateFilters()"><span>Missilis</span></label>
-                    <label class="checkbox-label"><input type="checkbox" value="tetra" onchange="updateFilters()"><span>Tetra</span></label>
-                    <label class="checkbox-label"><input type="checkbox" value="abnormal" onchange="updateFilters()"><span>Abnormal</span></label>
-                    <label class="checkbox-label"><input type="checkbox" value="pilgrim" onchange="updateFilters()"><span>Pilgrim</span></label>
-                </div>
-            </div>
-            <div class="filter-box">
-                <h4>Rarity:</h4>
-                <div class="checkbox-group">
-                    <label class="checkbox-label"><input type="checkbox" value="ssr" onchange="updateFilters()"><span>SSR</span></label>
-                    <label class="checkbox-label"><input type="checkbox" value="sr" onchange="updateFilters()"><span>SR</span></label>
-                    <label class="checkbox-label"><input type="checkbox" value="r" onchange="updateFilters()"><span>R</span></label>
-                </div>
-            </div>
-            <div class="filter-box">
-                <h4>Weapon Type:</h4>
-                <div class="checkbox-group">
-                    <label class="checkbox-label"><input type="checkbox" value="smg" onchange="updateFilters()"><span>SMG</span></label>
-                    <label class="checkbox-label"><input type="checkbox" value="ar" onchange="updateFilters()"><span>AR</span></label>
-                    <label class="checkbox-label"><input type="checkbox" value="snr" onchange="updateFilters()"><span>SNR</span></label>
-                    <label class="checkbox-label"><input type="checkbox" value="rl" onchange="updateFilters()"><span>RL</span></label>
-                    <label class="checkbox-label"><input type="checkbox" value="sg" onchange="updateFilters()"><span>SG</span></label>
-                    <label class="checkbox-label"><input type="checkbox" value="mg" onchange="updateFilters()"><span>MG</span></label>
-                </div>
-            </div>
-        </div>
-    </div>
     </div>
 </div>
 
@@ -996,6 +953,50 @@
     </script>
     <!-- Export function moved to export.js -->
 
+
+<!-- Filter Content (moved outside of search-filter-container) -->
+<div id="filterContent" class="filter-content" style="display: none;">
+    <div class="filter-grid">
+        <!-- Burst filter moved to top bar -->
+        <div class="filter-box">
+            <h4>Class:</h4>
+            <div class="checkbox-group">
+                <label class="checkbox-label"><input type="checkbox" value="def" onchange="updateFilters()"><span>Defender</span></label>
+                <label class="checkbox-label"><input type="checkbox" value="sp" onchange="updateFilters()"><span>Supporter</span></label>
+                <label class="checkbox-label"><input type="checkbox" value="atk" onchange="updateFilters()"><span>Attacker</span></label>
+            </div>
+        </div>
+        <div class="filter-box">
+            <h4>Industry:</h4>
+            <div class="checkbox-group">
+                <label class="checkbox-label"><input type="checkbox" value="elysion" onchange="updateFilters()"><span>Elysion</span></label>
+                <label class="checkbox-label"><input type="checkbox" value="missilis" onchange="updateFilters()"><span>Missilis</span></label>
+                <label class="checkbox-label"><input type="checkbox" value="tetra" onchange="updateFilters()"><span>Tetra</span></label>
+                <label class="checkbox-label"><input type="checkbox" value="abnormal" onchange="updateFilters()"><span>Abnormal</span></label>
+                <label class="checkbox-label"><input type="checkbox" value="pilgrim" onchange="updateFilters()"><span>Pilgrim</span></label>
+            </div>
+        </div>
+        <div class="filter-box">
+            <h4>Rarity:</h4>
+            <div class="checkbox-group">
+                <label class="checkbox-label"><input type="checkbox" value="ssr" onchange="updateFilters()"><span>SSR</span></label>
+                <label class="checkbox-label"><input type="checkbox" value="sr" onchange="updateFilters()"><span>SR</span></label>
+                <label class="checkbox-label"><input type="checkbox" value="r" onchange="updateFilters()"><span>R</span></label>
+            </div>
+        </div>
+        <div class="filter-box">
+            <h4>Weapon Type:</h4>
+            <div class="checkbox-group">
+                <label class="checkbox-label"><input type="checkbox" value="smg" onchange="updateFilters()"><span>SMG</span></label>
+                <label class="checkbox-label"><input type="checkbox" value="ar" onchange="updateFilters()"><span>AR</span></label>
+                <label class="checkbox-label"><input type="checkbox" value="snr" onchange="updateFilters()"><span>SNR</span></label>
+                <label class="checkbox-label"><input type="checkbox" value="rl" onchange="updateFilters()"><span>RL</span></label>
+                <label class="checkbox-label"><input type="checkbox" value="sg" onchange="updateFilters()"><span>SG</span></label>
+                <label class="checkbox-label"><input type="checkbox" value="mg" onchange="updateFilters()"><span>MG</span></label>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
