--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             </div>
             <div class="search-wrapper">
                 <div class="search-bar">
-                    <input type="text" id="searchInput" placeholder="Type to search...">
+                    <input type="text" id="myNikkesSearchInput" placeholder="Type to search...">
                 </div>
             </div>
             <div class="filter-wrapper">
@@ -1050,15 +1050,15 @@
 
 
 <!-- Filter Panel (fixed position) -->
-<div id="filterPanel" class="filter-panel" style="display: block; width: 380px; height: auto;">
+<div id="filterPanel" class="filter-panel" style="display: block; width: 340px; height: auto;">
     <div class="filter-header">
-        <h3 class="filter-title">Filter Options</h3>
+        <h3 class="filter-title">Filter Nikkes</h3>
         <button id="closeFilterBtn" class="close-filter-btn" onclick="event.stopPropagation(); event.preventDefault(); setTimeout(function() { hideFilterPanel(); }, 10);">×</button>
     </div>
     <div class="filter-grid">
         <!-- Burst filter moved to top bar -->
         <div class="filter-box">
-            <h4>Class:</h4>
+            <h4>Class</h4>
             <div class="checkbox-group">
                 <label class="checkbox-label"><input type="checkbox" value="def" onchange="updateFilters()"><span>Defender</span></label>
                 <label class="checkbox-label"><input type="checkbox" value="sp" onchange="updateFilters()"><span>Supporter</span></label>
@@ -1066,7 +1066,15 @@
             </div>
         </div>
         <div class="filter-box">
-            <h4>Industry:</h4>
+            <h4>Rarity</h4>
+            <div class="checkbox-group">
+                <label class="checkbox-label"><input type="checkbox" value="ssr" onchange="updateFilters()"><span>SSR</span></label>
+                <label class="checkbox-label"><input type="checkbox" value="sr" onchange="updateFilters()"><span>SR</span></label>
+                <label class="checkbox-label"><input type="checkbox" value="r" onchange="updateFilters()"><span>R</span></label>
+            </div>
+        </div>
+        <div class="filter-box">
+            <h4>Industry</h4>
             <div class="checkbox-group">
                 <label class="checkbox-label"><input type="checkbox" value="elysion" onchange="updateFilters()"><span>Elysion</span></label>
                 <label class="checkbox-label"><input type="checkbox" value="missilis" onchange="updateFilters()"><span>Missilis</span></label>
@@ -1076,15 +1084,7 @@
             </div>
         </div>
         <div class="filter-box">
-            <h4>Rarity:</h4>
-            <div class="checkbox-group">
-                <label class="checkbox-label"><input type="checkbox" value="ssr" onchange="updateFilters()"><span>SSR</span></label>
-                <label class="checkbox-label"><input type="checkbox" value="sr" onchange="updateFilters()"><span>SR</span></label>
-                <label class="checkbox-label"><input type="checkbox" value="r" onchange="updateFilters()"><span>R</span></label>
-            </div>
-        </div>
-        <div class="filter-box">
-            <h4>Weapon Type:</h4>
+            <h4>Weapon Type</h4>
             <div class="checkbox-group">
                 <label class="checkbox-label"><input type="checkbox" value="smg" onchange="updateFilters()"><span>SMG</span></label>
                 <label class="checkbox-label"><input type="checkbox" value="ar" onchange="updateFilters()"><span>AR</span></label>
@@ -1094,20 +1094,19 @@
                 <label class="checkbox-label"><input type="checkbox" value="mg" onchange="updateFilters()"><span>MG</span></label>
             </div>
         </div>
-        <div class="search-filter-container">
-            <div class="burst-filter-buttons">
-                <button class="burst-btn" data-value="b1">I</button>
-                <button class="burst-btn" data-value="b2">II</button>
-                <button class="burst-btn" data-value="b3">III</button>
-                <button class="burst-btn" data-value="a">A</button>
+        <div class="filter-box">
+            <h4>Burst Type</h4>
+            <div class="checkbox-group" style="display: flex; flex-direction: row; gap: 8px;">
+                <label class="checkbox-label" style="flex: 1;"><input type="checkbox" value="b1" onchange="updateFilters()"><span>Type I</span></label>
+                <label class="checkbox-label" style="flex: 1;"><input type="checkbox" value="b2" onchange="updateFilters()"><span>Type II</span></label>
+                <label class="checkbox-label" style="flex: 1;"><input type="checkbox" value="b3" onchange="updateFilters()"><span>Type III</span></label>
+                <label class="checkbox-label" style="flex: 1;"><input type="checkbox" value="a" onchange="updateFilters()"><span>Type A</span></label>
             </div>
-            <div class="search-wrapper">
-                <div class="search-bar">
-                    <input type="text" id="searchInput" placeholder="Type to search...">
-                </div>
-            </div>
-            <div class="filter-wrapper">
-                <button id="filterBtn" class="burst-btn filter-btn" onclick="event.stopPropagation(); event.preventDefault(); setTimeout(function() { toggleFilterPanel(); }, 10);"><i class="filter-icon">⚙️</i></button>
+        </div>
+        <div class="filter-box" style="grid-column: span 2;">
+            <h4>Search</h4>
+            <div class="search-bar" style="width: 100%;">
+                <input type="text" id="gallerySearchInput" placeholder="Type to search..." style="width: 100%;">
             </div>
         </div>
     </div>
