update filter panel

--- a/index.html
+++ b/index.html
@@ -1050,10 +1050,10 @@
 
 
 <!-- Filter Panel (fixed position) -->
-<div id="filterPanel" class="filter-panel" style="display: block; width: 240px; height: auto;">
+<div id="filterPanel" class="filter-panel" style="display: block; width: 120px; height: auto;">
     <div class="filter-header">
         <h3 class="filter-title">Filters</h3>
-        <button id="closeFilterBtn" class="close-filter-btn" onclick="event.stopPropagation(); event.preventDefault(); setTimeout(function() { hideFilterPanel(); }, 10);">×</button>
+        <button id="closeFilterBtn" class="close-filter-btn" onclick="event.stopPropagation(); event.preventDefault(); setTimeout(function() { hideFilterPanel(); }, 5);">✕</button>
     </div>
     <div class="filter-grid">
         <!-- Compact filter layout -->
